Colaboratory를 통해 생성됨

--- a/Q13.ipynb
+++ b/Q13.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOEGpA2/bENKFczPbDq56ZX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/okohkim/DLG4/blob/main/Q13.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/seonbeenkim/DLG4/blob/main/Q13.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -37,12 +36,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "05AS0jPhp8As"
+        "id": "05AS0jPhp8As",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "10559898-97c8-459a-8a4e-53ce959990ab"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[5, 2, 1, 6, 6]\n"
+          ]
+        }
+      ],
+      "source": [
+        "\n",
+        "numbers = []\n",
+        "\n",
+        "import random\n",
+        "\n",
+        "for i in range(1,6):\n",
+        "  n = random.randint(0,10)\n",
+        "  numbers.append(n)\n",
+        "  \n",
+        "print(numbers)"
+      ]
     }
   ]
 }
