--- a/Q14.ipynb
+++ b/Q14.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPJJAYDLObb0e1JJpAHHIcR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/okohkim/DLG4/blob/main/Q14.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/seonbeenkim/DLG4/blob/main/Q14.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -37,12 +36,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "L-K1OQtTp5Ub"
+        "id": "L-K1OQtTp5Ub",
+        "outputId": "ec3e9777-42c7-46fb-8a56-fa0e5b3b0d25",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "red\n",
+            "pink\n",
+            "yellow\n"
+          ]
+        }
+      ],
+      "source": [
+        "color_list = [\"red\",\"pink\",\"yellow\"]\n",
+        "\n",
+        "for c in color_list:\n",
+        "  print(c)"
+      ]
     }
   ]
 }
